--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between; /*better than adding margin auto to divs*/
+  align-items: center;
+  padding: 8px; /*big mistake*/
 }
 
 .logo {
@@ -14,6 +18,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0; 
+  display: flex;
+  gap: 8px; /*mistake*/
 }
 
 a {
